grammar.js
  word: $ => $.word,

  rules: {
    program: $ => optional($._statements),

    _statements: $ => prec(1, seq(
      repeat(seq(
        $._statement,
        $._terminator,
      )),
      $._statement,
      optional($._terminator),
    )),

    _terminated_statement: $ => repeat1(seq(
      $._statement,
      $._terminator,
    )),

    // Statements

    function_definition: $ => prec.right(seq(
      choice(
        seq(
          'function',
          field('name', $.word),
          optional(seq('(', ')')),
        ),
        seq(
          field('name', $.word),
          '(', ')',
        ),

        // support anonymous functions
        seq('(', ')'),
      ),
      field(
        'body',
        choice(
          $.compound_statement,
          $.subshell,
          $.test_command,
          $.if_statement,
        ),
      ),
      field('redirect', optional($._redirect)),
    )),

    compound_statement: $ => seq(
      '{',
      optional($._terminated_statement),
      token(prec(-1, '}')),
    ),

    test_command: $ => seq(
      choice(
        seq('[', optional(choice($._expression, $.redirected_statement)), ']'),
        seq(
          '[[',
          choice(
            $._expression,
            alias($._test_command_binary_expression, $.binary_expression),
          ),
          ']]',
        ),
        seq('((', optional($._expression), '))'),
      ),
    ),

    _test_command_binary_expression: $ => prec(PREC.ASSIGN,
      seq(
        field('left', $._expression),
        field('operator', '='),
        field('right', alias($._regex_no_space, $.regex)),
      ),
    ),

    declaration_command: $ => prec.left(seq(
      choice('declare', 'typeset', 'export', 'readonly', 'local'),
      repeat(choice(
        $._literal,
        // TODO: clean up this hack. not sure why _simple_variable_name isn't matching '_'
        alias(choice('_', $._simple_variable_name), $.variable_name),
        alias($.declare_variable_assignment, $.variable_assignment),
      )),
    )),

    command: $ => prec.left(seq(
      repeat(choice(
        $.variable_assignment,
        field('redirect', $._redirect),
      )),
      field('name', $.command_name),
      choice(
        repeat(choice(
          field('argument', $._literal),
          field('argument', alias($._bare_dollar, '$')),
          field('argument', seq(
            choice('=~', '=='),
            choice($._literal, $.regex),
          )),
          field('redirect', $.herestring_redirect),
        )),
        $.subshell,
      ),
    )),

    command_name: $ => $._literal,

    variable_assignment: $ => seq(
      field('name', choice(
        $.variable_name,
        $.subscript,
      )),
      choice(
        '=',
        '+=',
      ),
      field('value', choice(
        $._literal,
        $.array,
        $._empty_value,
        alias($._comment_word, $.word),
      )),
    ),

    variable_name_with_expansion: $ => prec(0, seq(
      optional(alias(choice('_', $._simple_variable_name), $.variable_name)),
      repeat1(prec(2, choice(
        $.simple_expansion,
        $.expansion,
      ))),
    )),

    subscript: $ => prec.left(seq(
      // FIXME: look more closely at special variables that can have subscripts
      field('name', choice($.variable_name, '*', '@', '?', '-', '_')),
      '[',
      field('index', choice($._literal, $.binary_expression, $.unary_expression, $.parenthesized_expression)),
      optional($._concat),
      ']',
      optional($._concat),
    )),

    _redirect: $ => choice($.file_redirect, $.herestring_redirect),

    // Expressions

    _expression: $ => choice(
      $._literal,
      $.unary_expression,
      $.ternary_expression,
      $.binary_expression,
      $.postfix_expression,
      $.parenthesized_expression,
    ),

    // https://tldp.org/LDP/abs/html/opprecedence.html
    binary_expression: $ => {
      const table = [
        [choice('+=', '-=', '*=', '/=', '%=', '**=', '<<=', '>>=', '&=', '^=', '|='), PREC.UPDATE],
        [choice('=', '=~'), PREC.ASSIGN],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['|', PREC.BITWISE_OR],
        ['^', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        [choice('==', '!='), PREC.EQUALITY],
        [choice('<', '>', '<=', '>='), PREC.COMPARE],
        [$.test_operator, PREC.TEST],
        [choice('<<', '>>'), PREC.SHIFT],
        [choice('+', '-'), PREC.ADD],
        [choice('*', '/', '%'), PREC.MULTIPLY],
        ['**', PREC.EXPONENT],
      ];

      return choice(
        choice(...table.map(([operator, precedence]) => {
        // @ts-ignore
          return prec[operator === '**' ? 'right' : 'left'](precedence, seq(
            field('left', $._expression),
            // @ts-ignore
            field('operator', operator),
            field('right', $._expression),
          ));
        })),
        prec(PREC.ASSIGN, seq(
          field('left', $._expression),
          field('operator', '=~'),
          field('right', alias($._regex_no_space, $.regex)),
        )),
        prec(PREC.EQUALITY, seq(
          field('left', $._expression),
          field('operator', choice('==', '!=')),
          field('right', $._extglob_blob),
        )),
      );
    },

    _literal: $ => choice(
      $.concatenation,
      $._primary_expression,
      alias(prec(-2, repeat1($._special_character)), $.word),
    ),

    arithmetic_expansion: $ => choice(
      seq(choice('$((', '(('), commaSep1($._arithmetic_expression), '))'),
      seq('$[', $._arithmetic_expression, ']'),
    ),

    brace_expression: $=> choice(
      $._brace_range_expression,
      $._brace_comma_expression,
    ),

    _brace_range_expression: $ => seq(
      alias($._brace_range_start, '{'),
      $._brace_range_literal,
      token.immediate('..'),
      $._brace_range_literal,
      optional(seq(
        token.immediate('..'),
        alias(token.immediate(/\d+/), $.number),
      )),
      '}',
    ),

    letter: _ => /[a-zA-Z]/,

    _brace_comma_expression: $=> seq(
      alias($._brace_comma_start, '{'),
      $._brace_comma_literal,
      repeat1(seq(
        token.immediate(','),
        optional($._brace_comma_literal),
      )),
      token.immediate('}'),
    ),

    _arithmetic_expression: $ => prec(1, choice(
      $._arithmetic_literal,
      alias($._arithmetic_unary_expression, $.unary_expression),
      alias($._arithmetic_ternary_expression, $.ternary_expression),
      alias($._arithmetic_binary_expression, $.binary_expression),
      alias($._arithmetic_postfix_expression, $.postfix_expression),
      alias($._arithmetic_parenthesized_expression, $.parenthesized_expression),
      $.command_substitution,
    )),

    string: $ => seq(
      '"',
      repeat(seq(
        choice(
          seq(optional('$'), $.string_content),
          $.expansion,
          $.simple_expansion,
          $.command_substitution,
          $.arithmetic_expansion,
        ),
        optional($._concat),
      )),
      optional('$'),
      '"',
    ),

    string_content: _ => token(prec(-1, /([^"`$\\\r\n]|\\(.|\r?\n))+/)),

    number: $ => choice(
      /-?(0x)?[0-9]+(#[0-9A-Za-z@_]+)?/,
      // the base can be an expansion or command substitution
      seq(/-?(0x)?[0-9]+#/, choice($.expansion, $.command_substitution)),
    ),

    simple_expansion: $ => seq(
      '$',
      choice(
        // zsh: have to pull out $# here because $#var is valid.
        // And had to use external scanner because otherwise _concat will grab everything
        alias($._bare_hash, $.special_variable_name),

        seq(
          // optional operators when not using braces
          optional(alias(choice('+', '=' ), $.operator)),
          optional(alias($._hash_operator, $.operator)),
          choice(
            $._simple_variable_name,
            $._multiline_variable_name,
            $._special_variable_name,
            $.variable_name,
            $.subscript,
            alias('!', $.special_variable_name),
          ),
        ),
      ),
    ),

    expansion: $ => seq(
      '${',
      optional($.expansion_flags),
      optional($._expansion_body),
      '}',
    ),

    expansion_flags: $ => seq(
      '(',
      repeat1(
        choice(
          '#', '%', '@', 'A', 'a', 'b', 'C', 'c', 'D', 'e',
          'F', 'i', 'k', 'L', 'n', '-', 'o', 'O', 'P', 'Q',
          'q', 't', 'U', 'u', 'V', 'V', 'W', 'w', 'X', 'z',
          '0', 'p', '~', 'S', '*', 'B', 'E', 'M', 'N', 'R',

          /* s:string: */
          seq('s', $._zsh_delimited_string),

          /* g:opts: */
          seq('g', ':', /[^:]*/, ':'),

          /* j:string: */
          seq('j', $._zsh_delimited_string),

          /* Z:opts: */
          seq('Z', $._zsh_delimited_string),

          /* _:opts: */
          '_::',

          /* I:expr: */
          seq('I', $._zsh_delimited_string),

          /* l:expr::string1::string2: */
          seq('l', $._zsh_delimited_string,
            optional(seq(
              $._zsh_delimited_string,
              optional(
                $._zsh_delimited_string,
              )),
            ),
          ),

          /* r:expr::string1::string2: */
          seq('r', $._zsh_delimited_string,
            optional(seq(
              $._zsh_delimited_string,
              optional(
                $._zsh_delimited_string,
              )),
            ),
          ),
        )),
      ')',
    ),

    _expansion_body: $ => choice(
      // ${!##} ${!#}
      repeat1(field(
        'operator',
        choice(
          alias($._external_expansion_sym_hash, '#'),
          alias($._external_expansion_sym_bang, '!'),
          alias($._external_expansion_sym_equal, '='),
        ),
      )),
      seq(
        optional(field('operator', token.immediate('!'))),
        choice(
          $.variable_name,
          $._simple_variable_name,
          $._special_variable_name,
          $.subscript,
          $.prompt_expansion,

          // support nested expansion
          $.expansion,
        ),
        optional(choice(
          $._expansion_expression,
          $._expansion_regex,
          $._expansion_regex_replacement,
          $._expansion_regex_removal,
          $._expansion_max_length,
          $._expansion_operator,
        )),
      ),
      seq(
        field('operator', token.immediate('!')),
        choice($._simple_variable_name, $.variable_name),
        optional(field('operator', choice(
          token.immediate('@'),
          token.immediate('*'),
        ))),
      ),
      seq(
        optional(field('operator', immediateLiterals('#', '!', '='))),
        choice(
          $.subscript,
          $._simple_variable_name,
          $._special_variable_name,
          $.command_substitution,
        ),
        repeat(field(
          'operator',
          choice(
            alias($._external_expansion_sym_hash, '#'),
            alias($._external_expansion_sym_bang, '!'),
            alias($._external_expansion_sym_equal, '='),
          ),
        )),
      ),
      seq(
        // zsh can have no operators with :- and :+
        field('operator', immediateLiterals(':-', ':+')),
        optional(choice(
          $.variable_name,
          $._simple_variable_name,
          $._special_variable_name,
          $.subscript,
          // taking out for now in lieu of word
          // $.prompt_expansion,
          $.word,
        )),
      ),
      seq(
        field('operator', immediateLiterals('+', ':?')),
        choice(
          $.variable_name,
          $._simple_variable_name,
          $._special_variable_name,
          $.subscript,
          // taking out for now in lieu of word
          // $.prompt_expansion,
          $.word,
        ),
      ),
    ),

    expansion_modifier: $ => seq(
      choice(
        'A', 'a', 'c', 'e', 'l', 'P', 'p', 'q', 'Q', 'r',
        '&', 'u', 'x', 'f', 'w',

        // h[digits]
        seq('h', /[0-9]+/),

        // s/l/r[/]

        // t[digits]
        seq('t', /[0-9]+/),

        // F:expr:
        seq('F', $._zsh_delimited_string),

        // W:sep:
        seq('W', $._zsh_delimited_string),
      ),
    ),

    _extglob_blob: $ => choice(
      $.extglob_pattern,
      seq(
        $.extglob_pattern,
        choice($.string, $.expansion, $.command_substitution),
        optional($.extglob_pattern),
      ),
    ),

    comment: _ => token(prec(-10, /#.*/)),

    _comment_word: _ => token(prec(-8, seq(
      choice(
        noneOf(...SPECIAL_CHARACTERS),
        seq('\\', noneOf('\\s')),
      ),
      repeat(choice(
        noneOf(...SPECIAL_CHARACTERS),
        seq('\\', noneOf('\\s')),
        '\\ ',
      )),
    ))),

    _simple_variable_name: $ => alias(/\w+/, $.variable_name),
    _multiline_variable_name: $ => alias(
      token(prec(-1, /(\w|\\\r?\n)+/)),
      $.variable_name,
    ),

    // FIXME: prolly should find a cleaner way to handle #
    _special_variable_name: $ => alias(choice('*', '@', '?', '!', '#', '-', '$', '0', '_'), $.special_variable_name),
    word: _ => token(seq(
      choice(
        noneOf('#', ...SPECIAL_CHARACTERS),
        seq('\\', noneOf('\\s')),

        // Add support for zsh ranges. It's possible this would be better added
        // to the extglob_pattern code in scanner.c.
        seq('<', repeat(/[0-9]/), '-', optional(repeat(/[0-9]/)), '>'),
      ),
      repeat(choice(
        noneOf(...SPECIAL_CHARACTERS),
        seq('\\', noneOf('\\s')),
        seq('<', repeat(/[0-9]/), '-', optional(repeat(/[0-9]/)), '>'),
        '\\ ',
      )),
    )),
