test/corpus/zsh.txt
================================================================================
Parameter expansion flags (zsh)
================================================================================

echo "${(L)var}"
echo ${(s.:.)var}
echo ${(g::)var}
echo ${(g:o:)var}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (string
      (expansion
        (expansion_flags)
        (variable_name))))
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (variable_name)))
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (variable_name)))
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (variable_name))))

================================================================================
Prompt username parameter expansion (zsh)
================================================================================

echo ${(%)var:-%n}
echo ${(%):-%n}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (variable_name)
      (word)))
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (word))))

================================================================================
Test with array subscript (zsh)
================================================================================

[[ (( $commands[nvim] )) ]]

--------------------------------------------------------------------------------

(program
  (test_command
    (arithmetic_expansion
      (simple_expansion
        (subscript
          (variable_name)
          (word))))))

================================================================================
Variable with array subscript (zsh)
================================================================================

echo $commands[nvim]

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
      (simple_expansion
        (subscript
          (variable_name)
          (word))))))

================================================================================
Test with numeric range (zsh)
================================================================================

[[ 5.11 == 5.<1->*  ]]

--------------------------------------------------------------------------------

(program
  (test_command
    (binary_expression
      (word)
      (word))))

================================================================================
Anonymous functions (zsh)
================================================================================

() {
  echo "hi"
}
--------------------------------------------------------------------------------

(program
  (function_definition
    (compound_statement
      (command
        (command_name
          (word))
        (string
          (string_content))))))

================================================================================
Nested variable expansion (zsh)
================================================================================

echo ${${:-zsh}:c}
--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (expansion
      (expansion
        (variable_name))
      (expansion_modifier))))

================================================================================
Expansion modifier with delimited string (zsh)
================================================================================

echo ${var:F(asd)}
echo ${(l.15..-..=.r:15::=::-:)var}
--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (expansion
      (variable_name)
      (expansion_modifier)))
  (command
    (command_name
      (word))
    (expansion
      (expansion_flags)
      (variable_name))))

================================================================================
Simple variable names with special characters (zsh)
================================================================================

echo $+parameters
echo $#arr

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (simple_expansion
      (variable_name))))

================================================================================
Nested expansion with no variable name (zsh)
================================================================================

echo ${${:-asd}}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (expansion
      (expansion
        (variable_name)))))


================================================================================
Variable expansions in assignment (zsh)
================================================================================

typeset -i asd$var
typeset asd$2=1
typeset _$var=1

--------------------------------------------------------------------------------

(program
  (declaration_command
    (word)
    (variable_name)
    (simple_expansion
      (variable_name)))
  (declaration_command
    (variable_assignment
      (variable_name_with_expansion
        (variable_name)
        (simple_expansion
          (variable_name)))
      (number)))
  (declaration_command
    (variable_assignment
      (variable_name_with_expansion
        (variable_name)
        (simple_expansion
          (variable_name)))
      (number))))

================================================================================
Empty :- and :? operators (zsh)
================================================================================

echo ${:-}
echo ${:+}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (expansion))
  (command
    (command_name
      (word))
    (expansion)))

================================================================================
Brace expansions basic (zsh)
================================================================================

echo {a..e}
echo {1..5}
echo {1..10..2}
echo {a,b}
echo {a,b,}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (brace_expression
      (letter)
      (letter)))
  (command
    (command_name
      (word))
    (brace_expression
      (number)
      (number)))
  (command
    (command_name
      (word))
    (brace_expression
      (number)
      (number)
      (number)))
  (command
    (command_name
      (word))
    (brace_expression
      (word)
      (word)))
  (command
    (command_name
      (word))
    (brace_expression
      (word)
      (word))))

================================================================================
Brace expansions advanced (zsh)
================================================================================

echo {a,{1..2},c}
echo {${num}..10}
echo {$#parts..5}
echo {a,b{1..2},c}
echo {1$num..10}

--------------------------------------------------------------------------------

(program
  (command
    (command_name
      (word))
    (brace_expression
      (word)
      (brace_expression
        (number)
        (number))
      (word)))
  (command
    (command_name
      (word))
    (brace_expression
      (expansion
        (variable_name))
      (number)))
  (command
    (command_name
      (word))
    (brace_expression
      (simple_expansion
        (operator)
        (variable_name))
      (number)))

(placeholder)
